Changelog
=========


2014-09-03b : v0.8.7.1 '.Import this !'
---------------------------------------

* '.import' and '.once' support 


2014-08-09a : v0.8.6 'Committed to speed'
-----------------------------------------

* use a transaction when importing a csv file


2014-07-02b : v0.8.5 'Rename your tabs !'
-----------------------------------------

* tabs can be renamed via double-click

* more OS agnostic


2014-06-30a : v0.8.4 'Move your tabs !'
---------------------------------------

* tabs can be dragged with the mouse


2014-06-28a : v0.8.3 'Cross on tabs !'
--------------------------------------

* each tab has its closing button 

* Ctrl-Z and Ctrl-Y works on Script Text aera


2014-06-26a : v0.8.2 'Getting to the point'
-------------------------------------------

* switch to no-autocommit mode by default to allow savepoints

* a 'legacy autocommit' Open Database option is added

* add an example of COMMIT and ROLLBACK, and an example of SAVEPOINTS


2014-06-25a : v0.8.1 'Attach them all !'
----------------------------------------

* support attachement of several databases with the same name


2014-06-21a : v0.8.0 'Mark the date !'
--------------------------------------

* recognize date formats in .csv importation


2014-06-19a : v0.7.2 'Remember me'
----------------------------------

* keep memory of last directory used


2014-06-17a : v0.7.1
--------------------

* improved publishing on Pypi (was tricky, especially the front page)


2014-06-15b : v0.7.0
--------------------

* create a github project 'sqlite_bro', from 'sqlite_py_manager' baresql example

* discover how to publish on Pypi (hard)


2014-06-14c : "It's a long way to temporary !"
----------------------------------------------

* works with  temporary tables


2014-06-10a : 'Sanitizer of Python (xkcd.com/327)'
--------------------------------------------------

* imported python functions must be validated


2014-06-09a : 'The magic 8th PEP'
---------------------------------
